DOCKER CONFIGURATION [BACK & FRONT IMAGES BUILD]
